app-with-db.yml
apiVersion: v1 
kind: Pod
metadata:
  name: app-with-db
  labels:
    app: my-webapp
spec:
  containers:
    - name: webapp
      image: nginx:latest
      ports:
      - containerPort: 80
			name: db-credentials
			key: username
	  - name: MONGO_INITDB_ROOT_PASSWORD
	  	SecretKeyRef:
			name: db-credentials
			key: password
--------------------------
apiVersion: v1
kind: Service
metadata:
	name: webapp-service
spec:
	selector:
		app: webapp
	ports:
		- protocol: TCP
		  port: 80
		  targetPort: 80
----------------------------
apiVersion: v1
kind: ConfigMap
metadata:
	name: webapp-config
data:
	WEBAPP_ENV: "production"
	DATABASE_URL: "mongodb://database-service:27017/mydb"
---
