webapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
    - host: url.com
      paths: /
        pathType: Prefix	
        backend:
          service:
            name: webapp-service
            port:
              number: 80
